--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.7",
+    "@rollup/rollup-darwin-arm64": "^4.21.3",
+    "@swc/core": "^1.7.26",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.5.4",
     "react": "^18.3.1",
@@ -34,6 +36,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "vite": "^5.4.1"
+    "vite": "^5.4.5"
   }
 }
