--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@swc/core": "^1.7.26",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.5.4",
+    "matter-js": "^0.20.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
