--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@swc/core": "^1.7.26",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.5.4",
+    "jquery": "^3.7.1",
     "matter-js": "^0.20.0",
+    "physicsjs": "^0.7.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "react-spring": "^9.7.4",
     "react-swipeable": "^7.0.1",
     "styled-components": "^6.1.13",
     "three": "^0.168.0"
