--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.7",
     "@swc/core": "^1.7.26",
     "bootstrap": "^5.3.3",
+    "fontawesome": "^5.6.3",
     "framer-motion": "^11.5.4",
     "jquery": "^3.7.1",
     "matter-js": "^0.20.0",
