--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fontawesome": "^5.6.3",
     "framer-motion": "^11.5.4",
     "jquery": "^3.7.1",
+    "lodash": "^4.17.21",
     "matter-js": "^0.20.0",
     "physicsjs": "^0.7.0",
     "react": "^18.3.1",
